--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <li>Je moet 465 traptreden beklimmen om op het hoogste punt van de Domtoren te komen</li>
             <li>In 1808 is Utrecht een half jaar lang de hoofdstad van Nederland geweest</li>
             <li>Utrecht is uitgeroepen tot de mooiste grachtenstad van Europa</li>
-            <li>Koning Willem-Alexander is geboren in Utrecht</li></ul><br><br>
+            <li>Koning Willem-Alexander is geboren in Utrecht</li></ul>
         </div>
         <div class="col-9">
             <section id="attracties">
